welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:17: error: value lenght is not a member of Array[java.awt.Color]
  peindreSol(couleurs((couleurs.length - 1 + decalage) % couleurs.lenght))
                                                                  ^